# AIDungeonRPG

./: .deepsource.toml  .env  .gitignore  Formata├º├úo  README.md  Rodando  actions.py  app.py  encounter_generator.py  format_code.bat  game_engine.py  groq_client.py  item_generator.py  main.py  models.py  prompt_manager.py  pyproject.toml  requirements.txt  routes.py  run_game.py  translations.py  utils.py  world_generator.py
ai/: __init__.py  action_validator.py  conversation_manager.py  fallback_handler.py  game_ai_client.py  groq_client.py  openrouter.py  prompt_builder.py  response_processor.py  schemas.py
app/: app.py  main.py  routes.py
attached_assets/: Pasted--2025-05-12-19-19-58-0000-4233-INFO-Handling-signal-winch-DEBUG-urllib3-connectionpool-Starti-1747077825463.txt  Pasted--2025-05-12-19-46-21-0000-7234-INFO-Starting-gunicorn-23-0-0-2025-05-12-19-46-21-0000-7234-1747079218700.txt  Pasted-ERROR-app-Exception-on-game-GET-Traceback-most-recent-call-last-File-home-runner-workspace-1747078041009.txt  Pasted-ERROR-app-Exception-on-game-GET-Traceback-most-recent-call-last-File-home-runner-workspace-1747078274863.txt
core/: __init__.py  actions.py  combat_stats.py  combat_system.py  enemy.py  error_handler.py  game_engine.py  game_state_model.py  location_generator.py  models.py  npc.py  prompt_manager.py  recipes.py  skill_handler.py  skills.py  survival_system.py  world_generator.py
data/: .gitkeep  1e55e11e199a428f7ace895cd411c463_character.json  1e55e11e199a428f7ace895cd411c463_gamestate.json  README.md  character_160d12c6-04a1-462a-b191-5926e0785d4b.json  (+31 more)
(+32 files in other folders)
